# spacegirl_tool

./: .gitignore  LICENSE  README.md  THREAT_MODEL.md  endpoints.example.toml  pyproject.toml
docs/: TPA_DOGFOOD_REPORT.md  WE_FLYING_UP_PLAN.md
docs/SSB_CRYPTO_PROM/: EXPLORATION_cloaking_vs_poisoning.md  PROM_12_MODE_SPLIT_REPORT.md  PROM_16_REPORT.md
spacegirl/: __init__.py  canary.py  cli.py  fpe.py  lang.py  optout.py  route.py  sidecar_crypto.py  ssb.py  surface.py  vocab.py  wall.py
tests/: test_cli.py  test_fpe.py  test_lang.py  test_route.py  test_sidecar_crypto.py  test_ssb.py  test_ssb_fpe_mode.py  test_v02.py
