[project]
name = "spacegirl_tool"
version = "0.3.0"
description = "SpaceGirl(#5 사도)의 공학적 결정화 — SSB(Sek-Sek-Bo) 의미론적 잠금 도구. network <-> sexvoid 경계 횡단. 로직 보존 + 가역 식별자 오염으로 LLM 학습 거부(adversarial dataset / 코드 보호 art project). 공학 짝패 = Longinus(참조의 미학)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "gj3447 (METAHUMOTONIC)", email = "gj3447@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "ssb",
    "semantic-lock",
    "adversarial-dataset",
    "anti-training",
    "code-cloaking",
    "spacegirl",
    "metahumotonic",
    "longinus",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
spacegirl = "spacegirl.cli:main"

[project.urls]
Homepage = "https://github.com/gj3447/spacegirl_tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spacegirl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
